Bug 473043 - Embedded Konsole crash on command execution
Summary: Embedded Konsole crash on command execution
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.0
Platform: Arch Linux Linux
: VHI crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: drkonqi
: 472950 473795 473836 473839 473933 473938 474284 474300 474306 474351 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-08-05 14:29 UTC by Jens Ramke
Modified: 2023-09-10 07:33 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-3291811-0.html (1.19 KB, text/html)
2023-08-27 12:07 UTC, tcanabrava
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jens Ramke 2023-08-05 14:29:22 UTC
Application: yakuake (23.07.80)

Qt Version: 5.15.10
Frameworks Version: 5.108.0
Operating System: Linux 6.4.8-zen2-xanmod1-1 x86_64
Windowing System: Wayland
Distribution: "Arch Linux"
DrKonqi: 5.27.7 [KCrashBackend]

-- Information about the crash:
Yakuake crashes each time Enter is pressed after typing a command, like "ls", "grep", "htop" etc.

The crash can be reproduced every time.

-- Backtrace:
Application: Yakuake (yakuake), signal: Segmentation fault
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = <optimized out>}
[KCrash Handler]
#6  0x00007f763d57197b in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::operator->() const (this=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qscopedpointer.h:118
#7  qGetPtrHelper<QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > >(QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >&) (ptr=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qglobal.h:1149
#8  QAction::d_func() (this=<optimized out>) at ../../include/QtWidgets/../../src/widgets/kernel/qaction.h:63
#9  QAction::setVisible(bool) (this=0x0, b=true) at kernel/qaction.cpp:1051
#10 0x00007f7627ed40a4 in Konsole::Screen::setReplMode(int) (this=0x560c8bb68680, mode=3) at /usr/src/debug/konsole/konsole-23.07.80/src/Screen.cpp:2395
#11 0x00007f7627eeff6b in Konsole::Vt102Emulation::processSessionAttributeRequest(int, unsigned int) (this=<optimized out>, tokenSize=<optimized out>, terminator=7) at /usr/src/debug/konsole/konsole-23.07.80/src/Vt102Emulation.cpp:1080
#12 0x00007f7627ee0220 in Konsole::Vt102Emulation::switchState(Konsole::Vt102Emulation::ParserStates, unsigned int) (this=this@entry=0x560c8c12f3c0, newState=newState@entry=Konsole::Vt102Emulation::Ground, cc=cc@entry=7) at /usr/src/debug/konsole/konsole-23.07.80/src/Vt102Emulation.cpp:434
#13 0x00007f7627ee05ac in Konsole::Vt102Emulation::receiveChars(QVector<unsigned int> const&) (this=0x560c8c12f3c0, chars=<optimized out>) at /usr/src/debug/konsole/konsole-23.07.80/src/Vt102Emulation.cpp:900
#14 0x00007f7627ebab8a in Konsole::Emulation::receiveData(char const*, int) (this=0x560c8c12f3c0, text=0x560c8c221b08 "\033]133;C\a", length=8) at /usr/src/debug/konsole/konsole-23.07.80/src/Emulation.cpp:233
#15 0x00007f763c8d0807 in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7fff84b92d40, r=<optimized out>, this=0x560c8bef62e0, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#16 doActivate<false>(QObject*, int, void**) (sender=0x560c8bdf8900, signal_index=17, argv=0x7fff84b92d40) at kernel/qobject.cpp:3925
#17 0x00007f7627ea88cb in Konsole::Pty::receivedData(char const*, int) (this=<optimized out>, _t1=<optimized out>, _t2=<optimized out>) at /usr/src/debug/konsole/build/src/konsoleprivate_autogen/EWIEGA46WW/moc_Pty.cpp:154
#18 0x00007f7627ec0769 in Konsole::Pty::dataReceived() (this=0x560c8bdf8900) at /usr/src/debug/konsole/konsole-23.07.80/src/Pty.cpp:101
#19 0x00007f763c8d0807 in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7fff84b92e10, r=<optimized out>, this=0x560c8bef61a0, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#20 doActivate<false>(QObject*, int, void**) (sender=0x560c8bdf8980, signal_index=3, argv=0x7fff84b92e10) at kernel/qobject.cpp:3925
#21 0x00007f76344ab0c7 in KPtyDevicePrivate::_k_canRead() (this=0x560c8beadf80) at /usr/src/debug/kpty/kpty-5.108.0/src/kptydevice.cpp:291
#22 0x00007f76344ab369 in KPtyDevice::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_c=<optimized out>, _a=0x7fff84b92fa0, _id=<optimized out>, _o=<optimized out>) at /usr/src/debug/kpty/build/src/KF5Pty_autogen/include/moc_kptydevice.cpp:84
#23 KPtyDevice::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=0x7fff84b92fa0) at /usr/src/debug/kpty/build/src/KF5Pty_autogen/include/moc_kptydevice.cpp:77
#24 0x00007f763c8d09c3 in doActivate<false>(QObject*, int, void**) (sender=0x560c8bdf8a90, signal_index=5, argv=0x7fff84b92fa0) at kernel/qobject.cpp:3937
#25 0x00007f763c8d2079 in QSocketNotifier::activated(int, QSocketNotifier::QPrivateSignal) (this=this@entry=0x560c8bdf8a90, _t1=<optimized out>, _t2=...) at .moc/moc_qsocketnotifier.cpp:185
#26 0x00007f763c8d216b in QSocketNotifier::event(QEvent*) (this=0x560c8bdf8a90, e=<optimized out>) at kernel/qsocketnotifier.h:115
#27 0x00007f763d57893f in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=<optimized out>, receiver=0x560c8bdf8a90, e=0x7fff84b930b0) at kernel/qapplication.cpp:3640
#28 0x00007f763c89b8d8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x560c8bdf8a90, event=0x7fff84b930b0) at kernel/qcoreapplication.cpp:1064
#29 0x00007f763c8e9496 in socketNotifierSourceDispatch(GSource*, GSourceFunc, gpointer) (source=0x560c8b975900) at kernel/qeventdispatcher_glib.cpp:107
#30 0x00007f763b081a31 in g_main_dispatch (context=0x7f7630000ee0) at ../glib/glib/gmain.c:3460
#31 g_main_context_dispatch (context=0x7f7630000ee0) at ../glib/glib/gmain.c:4200
#32 0x00007f763b0decc9 in g_main_context_iterate.isra.0 (context=context@entry=0x7f7630000ee0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/glib/gmain.c:4276
#33 0x00007f763b07f0e2 in g_main_context_iteration (context=0x7f7630000ee0, may_block=1) at ../glib/glib/gmain.c:4343
#34 0x00007f763c8ea72c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x560c8b975810, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#35 0x00007f763c89a5e4 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7fff84b93330, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#36 0x00007f763c89ba83 in QCoreApplication::exec() () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#37 0x00007f763cd3bef2 in QGuiApplication::exec() () at kernel/qguiapplication.cpp:1870
#38 0x00007f763d576cda in QApplication::exec() () at kernel/qapplication.cpp:2832
#39 0x0000560c8a2c3017 in main(int, char**) (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/yakuake/yakuake-23.07.80/app/main.cpp:74
[Inferior 1 (process 3300) detached]

Reported using DrKonqi
Comment 1 Jens Ramke 2023-08-09 14:48:15 UTC
Also happens when konsole is opened in dolphin with F4 (right away due to cd, I think), which crashes dolphin.
Does _not_ happen if konsole is opened directly.
Comment 2 tcanabrava 2023-08-27 12:07:26 UTC
Created attachment 161210 [details]
attachment-3291811-0.html

Please add the crash dump

On Sun, 27 Aug 2023 at 14:00 Jens Ramke <bugzilla_noreply@kde.org> wrote:

> https://bugs.kde.org/show_bug.cgi?id=473043
>
> Jens Ramke <jens.ramke@gmail.com> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>             Summary|Yakuake crash on command    |Embedded Konsole crash on
>                    |execution                   |command execution
>             Version|23.07.80                    |23.08.0
>
> --
> You are receiving this mail because:
> You are the assignee for the bug.
Comment 3 Jens Ramke 2023-08-27 12:09:13 UTC
Application: Dolphin (23.08.0)

Qt Version: 5.15.10
Frameworks Version: 5.109.0
Operating System: Linux 6.4.12-zen2-xanmod1-1 x86_64
Windowing System: Wayland
Distribution: "Arch Linux"
DrKonqi: 5.27.7 [KCrashBackend]

-- Information about the crash:
Dolphion crashes after F4 is pressed to open Konsole.

The crash can be reproduced every time.

Application: Dolphin (dolphin), signal: Segmentation fault
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = <optimized out>}
[KCrash Handler]
#6  0x00007fb2bc77197b in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::operator->() const (this=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qscopedpointer.h:118
#7  qGetPtrHelper<QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > >(QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >&) (ptr=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qglobal.h:1151
#8  QAction::d_func() (this=<optimized out>) at ../../include/QtWidgets/../../src/widgets/kernel/qaction.h:63
#9  QAction::setVisible(bool) (this=0x0, b=true) at kernel/qaction.cpp:1051
#10 0x00007fb29845b144 in Konsole::Screen::setReplMode(int) (this=0x55998aeb8310, mode=3) at /usr/src/debug/konsole/konsole-23.08.0/src/Screen.cpp:2395
#11 0x00007fb298476fdb in Konsole::Vt102Emulation::processSessionAttributeRequest(int, unsigned int) (this=<optimized out>, tokenSize=<optimized out>, terminator=7) at /usr/src/debug/konsole/konsole-23.08.0/src/Vt102Emulation.cpp:1080
#12 0x00007fb298467290 in Konsole::Vt102Emulation::switchState(Konsole::Vt102Emulation::ParserStates, unsigned int) (this=this@entry=0x55998b8745c0, newState=newState@entry=Konsole::Vt102Emulation::Ground, cc=cc@entry=7) at /usr/src/debug/konsole/konsole-23.08.0/src/Vt102Emulation.cpp:434
#13 0x00007fb29846761c in Konsole::Vt102Emulation::receiveChars(QVector<unsigned int> const&) (this=0x55998b8745c0, chars=<optimized out>) at /usr/src/debug/konsole/konsole-23.08.0/src/Vt102Emulation.cpp:900
#14 0x00007fb298441bea in Konsole::Emulation::receiveData(char const*, int) (this=0x55998b8745c0, text=0x55998b950d68 "\033]133;C\a", length=8) at /usr/src/debug/konsole/konsole-23.08.0/src/Emulation.cpp:233
#15 0x00007fb2bbad1637 in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7ffea7efb800, r=<optimized out>, this=0x55998b879dd0, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#16 doActivate<false>(QObject*, int, void**) (sender=0x55998b8773c0, signal_index=17, argv=0x7ffea7efb800) at kernel/qobject.cpp:3925
#17 0x00007fb29842f93b in Konsole::Pty::receivedData(char const*, int) (this=<optimized out>, _t1=<optimized out>, _t2=<optimized out>) at /usr/src/debug/konsole/build/src/konsoleprivate_autogen/EWIEGA46WW/moc_Pty.cpp:154
#18 0x00007fb2984477c9 in Konsole::Pty::dataReceived() (this=0x55998b8773c0) at /usr/src/debug/konsole/konsole-23.08.0/src/Pty.cpp:101
#19 0x00007fb2bbad1637 in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7ffea7efb8d0, r=<optimized out>, this=0x55998b879c90, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#20 doActivate<false>(QObject*, int, void**) (sender=0x55998b877440, signal_index=3, argv=0x7ffea7efb8d0) at kernel/qobject.cpp:3925
#21 0x00007fb2a20200c7 in KPtyDevicePrivate::_k_canRead() (this=0x55998b82d150) at /usr/src/debug/kpty/kpty-5.109.0/src/kptydevice.cpp:291
#22 0x00007fb2a2020369 in KPtyDevice::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_c=<optimized out>, _a=0x7ffea7efba60, _id=<optimized out>, _o=<optimized out>) at /usr/src/debug/kpty/build/src/KF5Pty_autogen/include/moc_kptydevice.cpp:84
#23 KPtyDevice::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=0x7ffea7efba60) at /usr/src/debug/kpty/build/src/KF5Pty_autogen/include/moc_kptydevice.cpp:77
#24 0x00007fb2bbad17f3 in doActivate<false>(QObject*, int, void**) (sender=0x55998b8795b0, signal_index=5, argv=0x7ffea7efba60) at kernel/qobject.cpp:3937
#25 0x00007fb2bbad2ea9 in QSocketNotifier::activated(int, QSocketNotifier::QPrivateSignal) (this=this@entry=0x55998b8795b0, _t1=<optimized out>, _t2=...) at .moc/moc_qsocketnotifier.cpp:185
#26 0x00007fb2bbad2f9b in QSocketNotifier::event(QEvent*) (this=0x55998b8795b0, e=<optimized out>) at kernel/qsocketnotifier.h:115
#27 0x00007fb2bc77893f in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=<optimized out>, receiver=0x55998b8795b0, e=0x7ffea7efbb70) at kernel/qapplication.cpp:3640
#28 0x00007fb2bba9c6f8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x55998b8795b0, event=0x7ffea7efbb70) at kernel/qcoreapplication.cpp:1064
#29 0x00007fb2bbaea276 in socketNotifierSourceDispatch(GSource*, GSourceFunc, gpointer) (source=0x55998aada720) at kernel/qeventdispatcher_glib.cpp:107
#30 0x00007fb2b9b0fa31 in g_main_dispatch (context=0x7fb2b0000ee0) at ../glib/glib/gmain.c:3460
#31 g_main_context_dispatch (context=0x7fb2b0000ee0) at ../glib/glib/gmain.c:4200
#32 0x00007fb2b9b6ccc9 in g_main_context_iterate.isra.0 (context=context@entry=0x7fb2b0000ee0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/glib/gmain.c:4276
#33 0x00007fb2b9b0d0e2 in g_main_context_iteration (context=0x7fb2b0000ee0, may_block=1) at ../glib/glib/gmain.c:4343
#34 0x00007fb2bbaeb51c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x55998aadf1b0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#35 0x00007fb2bba9b404 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7ffea7efbdf0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#36 0x00007fb2bba9c8a3 in QCoreApplication::exec() () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#37 0x00007fb2bbf3bef2 in QGuiApplication::exec() () at kernel/qguiapplication.cpp:1870
#38 0x00007fb2bc776cda in QApplication::exec() () at kernel/qapplication.cpp:2832
#39 0x000055998a5cadb8 in main(int, char**) (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/dolphin/dolphin-23.08.0/src/main.cpp:255
[Inferior 1 (process 3448) detached]
Comment 4 Antonio Rojas 2023-08-27 14:06:19 UTC
*** Bug 473795 has been marked as a duplicate of this bug. ***
Comment 5 Antonio Rojas 2023-08-27 14:09:50 UTC
*** Bug 472950 has been marked as a duplicate of this bug. ***
Comment 6 Antonio Rojas 2023-08-28 08:16:55 UTC
*** Bug 473836 has been marked as a duplicate of this bug. ***
Comment 7 Nicolas Fella 2023-08-28 10:29:56 UTC
*** Bug 473839 has been marked as a duplicate of this bug. ***
Comment 8 Antonio Rojas 2023-08-30 09:12:51 UTC
*** Bug 473933 has been marked as a duplicate of this bug. ***
Comment 9 Antonio Rojas 2023-08-30 11:27:42 UTC
*** Bug 473938 has been marked as a duplicate of this bug. ***
Comment 10 Vorpal 2023-08-30 16:40:07 UTC
Given the large number of duplicate reports it seems to affect a lot of users. And the bug has been open for more than a month? And is not yet marked as CONFIRMED. I'm confused here: Do you need any additional input from users or what is the holdup?
Comment 11 Vorpal 2023-08-30 16:41:10 UTC
(sorry, make that "almost a month", misread)
Comment 12 tcanabrava 2023-08-30 17:07:42 UTC
I can reproduce. I'll try to fix this tomorrow. 
Vorpal: no one works to develop for konsole and we use our free time to it.  sometimes bugs happen, and we need to do the best we can.
Comment 13 tcanabrava 2023-08-30 17:30:44 UTC
seems to be fixed in master, I can no longer reproduce the issue.
Comment 14 Antonio Rojas 2023-08-30 18:05:53 UTC
Probably 5bda57405e2f64e92a1142fb0898ff8ba5fafd3c, which wasn't backported for some reason.
Comment 15 Igor Poboiko 2023-08-31 08:45:56 UTC
(In reply to Antonio Rojas from comment #14)
> Probably 5bda57405e2f64e92a1142fb0898ff8ba5fafd3c, which wasn't backported
> for some reason.

I can confirm, I've rebuilt Konsole 23.08 with https://invent.kde.org/utilities/konsole/-/commit/5bda57405e2f64e92a1142fb0898ff8ba5fafd3c and can no longer reproduce this crash.
Comment 16 Bug Janitor Service 2023-08-31 08:57:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/892
Comment 17 Vorpal 2023-08-31 15:31:25 UTC
(In reply to tcanabrava from comment #12)
> I can reproduce. I'll try to fix this tomorrow. 
> Vorpal: no one works to develop for konsole and we use our free time to it. 
> sometimes bugs happen, and we need to do the best we can.

Indeed, I wasn't asking why it wasn't being fixed. Just why it wasn't marked confirmed. Seems to be about as much work as marking duplicates to mark it as confirmed after, say, 5 duplicates.
Comment 18 Kurt Hindenburg 2023-08-31 23:14:02 UTC
Git commit d1393cf591a17230b263b55d2ce890e3020f13ef by Kurt Hindenburg, on behalf of Antonio Rojas.
Committed on 01/09/2023 at 01:13.
Pushed by hindenburg into branch 'release/23.08'.

Fix crashes in testTerminalInterface

Certain user profiles crash here

   from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
    this=0x5555557c8da0, name=..., visible=true)
    at src/konsole/src/session/SessionController.cpp:2206
    mode=1) at src/konsole/src/Screen.cpp:2395
    at src/konsole/src/Vt102Emulation.cpp:1071
    this=0x555555dc2a30, cc=7)

(cherry picked from commit 5bda57405e2f64e92a1142fb0898ff8ba5fafd3c)

M  +6    -0    src/session/SessionController.cpp

https://invent.kde.org/utilities/konsole/-/commit/d1393cf591a17230b263b55d2ce890e3020f13ef
Comment 19 Antonio Rojas 2023-09-08 08:39:24 UTC
*** Bug 474284 has been marked as a duplicate of this bug. ***
Comment 20 Antonio Rojas 2023-09-08 14:43:29 UTC
*** Bug 474300 has been marked as a duplicate of this bug. ***
Comment 21 Antonio Rojas 2023-09-08 18:29:37 UTC
*** Bug 474306 has been marked as a duplicate of this bug. ***
Comment 22 Antonio Rojas 2023-09-10 06:45:02 UTC
*** Bug 474351 has been marked as a duplicate of this bug. ***